# coordinator

./: .env  .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  PROPOSAL.md  build.rs
catalog/: Cargo.toml
catalog/proptest-regressions/: query_catalog.txt  sink_catalog.txt  source_catalog.txt  worker_catalog.txt
catalog/src/: database.rs  lib.rs  notification.rs  query_catalog.rs  sink_catalog.rs  source_catalog.rs  test_utils.rs  testing.rs  worker_catalog.rs
common/: Cargo.toml  build.rs
common/src/: error.rs  lib.rs  supervised.rs
controller/: Cargo.toml  build.rs
controller/src/: lib.rs  request.rs
controller/src/cluster/: health_monitor.rs  mod.rs  poly_join_set.rs  service.rs  worker_client.rs  worker_registry.rs
controller/src/query/: context.rs  mod.rs  pending.rs  planned.rs  query_controller.rs  query_task.rs  reconciler.rs  registered.rs  retry.rs  running.rs  service.rs  terminated.rs
controller/src/query/lifecycle/: mod.rs  pending.rs  planned.rs  registered.rs  running.rs
controller/src/worker/: health_monitor.rs  mod.rs  poly_join_set.rs  worker_client.rs  worker_controller.rs  worker_registry.rs  worker_task.rs
coordinator/: Cargo.toml  build.rs
coordinator/proptest-regressions/: request_handler.txt
coordinator/src/: coordinator.rs  lib.rs  request_handler.rs  request_listener.rs  testing.rs
coordinator/tests/simulation/: cluster.rs  cluster_setup.rs  failpoints.rs  harness.rs  main.rs  runner.rs  simulation.rs  spec.rs  utils.rs
coordinator/tests/simulation/configs/: all.toml  attrition.toml  bug.toml  example.toml  heavy_churn.toml  no_faults.toml  partition.toml  simple.toml  total_restart.toml
coordinator/tests/simulation/invariant/: mod.rs
coordinator/tests/simulation/lifecycle/: mod.rs
coordinator/tests/simulation/recovery/: failpoints.rs  mod.rs  worker_crash.rs
coordinator/tests/simulation/worker/: mod.rs
coordinator/tests/simulation/workload/: attrition.rs  cluster.rs  crud.rs  degradation.rs  invariant.rs  mod.rs  partition.rs  query.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260204_185834_init.rs
migration/src/triggers/: mod.rs
migration/src/triggers/m20260204_185834_init/: mod.rs  postgres.down.sql  postgres.up.sql  sqlite.down.sql  sqlite.up.sql
migrations/: 001_initial.sql  001_tables.sql  002_static_data.sql  002_test_setup.sql  003_indexes.sql  003_triggers.sql  004_state_transitions.sql
model/: Cargo.toml
model/src/: lib.rs  testing.rs
model/src/query/: active_query.rs  fragment.rs  mod.rs  query_state.rs  terminated_query.rs
model/src/sink/: mod.rs
model/src/source/: logical_source.rs  mod.rs  physical_source.rs  schema.rs
model/src/testing/: fragment.rs  mod.rs  query.rs  sink.rs  source.rs  worker.rs
model/src/worker/: endpoint.rs  mod.rs  network_link.rs  topology.rs
proptest-regressions/catalog/query/: query_catalog.txt
proptest-regressions/catalog/sink/: sink_catalog.txt
proptest-regressions/catalog/source/: source_catalog.txt
proptest-regressions/catalog/worker/: worker_catalog.txt
proto/: SingleNodeWorkerRPCService.proto  health.proto
reconciler/: Cargo.toml
reconciler/src/cluster/: mod.rs  service.rs
reconciler/src/query/: mod.rs  pending.rs  planned.rs  reconciler.rs  registered.rs  service.rs
src/: catalog.rs  cluster.rs  coordinator.rs  data_model.rs  db.rs  db_errors.rs  error.rs  errors.rs  events.rs  lib.rs  message_bus.rs  messages.rs  network_service.rs  request.rs  requests.rs  views.rs
src/catalog/: catalog.rs  catalog_base.rs  catalog_errors.rs  database.rs  logical_source.rs  mod.rs  notification.rs  physical_source.rs  query.rs  query_builder.rs  sink.rs  tables.rs  test_utils.rs  worker.rs
src/catalog/query/: fragment.rs  mod.rs  query.rs  query_catalog.rs  query_state.rs
src/catalog/sink/: mod.rs  sink.rs  sink_catalog.rs
src/catalog/source/: logical_source.rs  mod.rs  physical_source.rs  schema.rs  source_catalog.rs
src/catalog/worker/: endpoint.rs  mod.rs  worker.rs  worker_catalog.rs
src/cluster_controller/: cluster_service.rs  mod.rs  poly_join_set.rs  worker_client.rs  worker_registry.rs
src/controller/: mod.rs  query.rs  query_reconciler.rs  query_service.rs
src/data_model/: catalog.rs  catalog_errors.rs  logical_source.rs  mod.rs  physical_source.rs  query.rs  schema.rs  sink.rs  worker.rs
src/network/: cluster_service.rs  mod.rs  network_service.rs  poly_join_set.rs  worker_client.rs  worker_registry.rs
src/query_controller/: mod.rs  pending_query.rs  planned_query.rs  query_reconciler.rs  query_service.rs  registered_query.rs  running_query.rs
tests/integration_tests/: main.rs  simulation.rs  test_config.rs  test_coordinator.rs
tests/integration_tests/setup/: mod.rs
tests/integration_tests/worker/: mod.rs
tests/proptest-regressions/: simulation.txt
