[package]
name = "coordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
catalog.workspace = true
model.workspace = true
controller.workspace = true
madsim.workspace = true
tonic.workspace = true
flume.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
model = { workspace = true, features = ["testing"] }
proptest = "1.5"
