[package]
name = "coordinator"
version = "0.1.0"
edition = "2024"

[features]
testing = ["catalog/testing", "controller/testing"]

[dependencies]
common.workspace = true
catalog.workspace = true
model.workspace = true
controller.workspace = true
madsim.workspace = true
tonic.workspace = true
prost.workspace = true
flume.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures-util = "0.3"

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
catalog = { workspace = true, features = ["testing"] }
controller = { workspace = true, features = ["testing"] }
model = { workspace = true, features = ["testing"] }
proptest = "1.5"
serde_json.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
toml = "0.8"
serde = { workspace = true }
tokio-util = "0.7"
