[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
sea-orm.workspace = true
model.workspace = true
strum.workspace = true

[dependencies.sea-orm-migration]
version = "2.0.0-rc"
features = [
    "sqlx-sqlite",
    "runtime-tokio",
]
