[package]
name = "reconciler"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { workspace = true, features = ["testing"] }
catalog.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
flume.workspace = true
tonic.workspace = true
prost.workspace = true
tokio-retry.workspace = true

[build-dependencies]
tonic-build.workspace = true
